testing reducers and actions

--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "npm test -- --watch",
     "build": "webpack",
     "dev": "webpack --watch",
     "lint": "eslint src/**/*js"
@@ -17,8 +18,10 @@
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.1.0",
     "eslint": "^4.10.0",
     "eslint-plugin-react": "7.4.0",
+    "jest": "^21.2.1",
     "redux-devtools": "3.4.0",
     "webpack": "^3.8.1"
   },
